--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <a href="#education">Education</a>
     </nav>
 
-    <div class="bx bx-moon" id="darkmode-icon"></div>
+    <i class="bx bx-moon" id="darkmode-icon"></i>
    
-    <div class="bx bx-menu" id="menu-icon"></div>
+    <i class="bx bx-menu" id="menu-icon"></i>
     </header>
 
    <section class="home" id="home">
