--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="projects-layer">
                     <h4>TuTur Website</h4>
                     <p>A whole design of tutur website model with effective animations</p>
-                    <a href="https://vetriselvan213.github.io/Tuturly-WebDesign/" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="https://vetri-tutur-website-project.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="projects-box">
